--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>AmortizationRatio</finalName>
+        <finalName>AmortizationRatioAction</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
